--- a/develop-problem-C/PaperC/sections/05_model2.tex
+++ b/develop-problem-C/PaperC/sections/05_model2.tex
@@ -74,6 +74,7 @@ We construct the following covariates:
     \centering
     \caption{Cox Model Results: Hazard Ratios and 95\% CIs}
     \label{tab:cox_results}
+    \begin{threeparttable}
     \begin{tabular}{lccc}
         \toprule
         \textbf{Covariate} & \textbf{HR} & \textbf{95\% CI} & \textbf{$p$-value} \\
@@ -91,6 +92,7 @@ We construct the following covariates:
         \small
         \item *$p < 0.05$, ***$p < 0.001$. $^\dagger$From stratified analysis.
     \end{tablenotes}
+    \end{threeparttable}
 \end{table}
 
 \subsubsection{Key Findings}
